plugins {
	id 'org.springframework.boot' version '2.5.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'application'
	id 'org.openjfx.javafxplugin' version '0.0.10'
	id 'org.beryx.jlink' version '2.24.1'
}

javafx {
	version = "17"
	modules = [ 'javafx.controls', 'javafx.fxml' ]
}

group = 'nl.sander'
version = '0.0.1-SNAPSHOT'
//sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

jlink {
	launcher {
		name = 'hellofx'
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.5.5'
	implementation 'com.opencsv:opencsv:5.2'
	compileOnly 'org.projectlombok:lombok:1.18.20'
	annotationProcessor 'org.projectlombok:lombok:1.18.20'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
	testImplementation 'io.projectreactor:reactor-test:3.4.10'
	testImplementation 'org.springframework:spring-test'
	testImplementation("org.assertj:assertj-core:3.11.1")
}

test {
	useJUnitPlatform()
}
